# music-search-engine

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-slides.yml
notebooks/: 01_eda_spotify.ipynb  02_limpeza_dataset.py  03_stopwords_musicais.py  04_bm25_indexacao.ipynb  05_stemming_comparativo.py
scripts/: build_index.py  download_spotify_metadata.sh
slides/: index.html
src/music_search/: __init__.py  datasets.py  evaluation.py  indexer.py  indexer_raquel.py  preprocessing.py  preprocessing_raquel.py  ranking.py  search.py
src/music_search/vector/: __init__.py  config.py  indexing.py  search.py  ui_tk.py
src/music_search/vetorial/: gerar_dataset_unificado.py  gerar_embeddings_milvus.py  spotify_search.py  spotify_search_ui.py  sql_recupera_base.txt
src/music_search/web/: app.py
tests/: test_indexer.py  test_placeholder.py  test_preprocessing.py  test_ranking.py  test_vector_search.py
